--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-TQMa57xx core-image test
-===========================
+TQ Systems TQMa57xx modules Yocto integration test
+==================================================
 
 Supported boards
 ----------------
@@ -7,28 +7,87 @@ Supported boards
 SOC		SOM		Base board
 
 AM572x		TQMa572x	MBa57xx
+AM571x		TQMa571x	MBa57xx
 
 
 Quick Start Guide
 -----------------
 
-Clone this repo using git clone --recurse-submodules <url>
+Clone this repo using git clone --branch=<branch-name> --recurse-submodules <url>
 
-When switching branches keep in mind to keep the submodules in sync.
+current supported branches:
+- morty-tqma57xx
+
+branch names correspond to yocto release names
+
+When switching branches keep in mind to keep the submodules in sync:
+
+git submodule sync
+git submodule update --init
+
+To list supported machines:
+
+./ls-machines
 
 To help setting up an initial build space, use
 
-$: MACHINE=<machine> source setup-environment <build directory>
+export MACHINE=<machine> && source setup-environment <builddir> <config>
+
+where config is: minimal
+
+This will use sources/template/conf/bblayers.conf.<config> as initial template
+for your layer configuration. Additionally some config variables are injected:
+
+MACHINE: default tqma572x-mba57xx or value from environment
+SDKMACHINE: default i686 or value from environment
+DISTRO: default poky  or value from environment
+
+In case you have ~/.oe or ~/.yocto dir a site.conf file will be symlinked to
+the conf dir of the buildir to allow machine specific overrrides. For instance 
+to use a shared download directory, you can provide $DL_DIR via ~/.yocto/site.conf.
+
+Internally the oe-init-build-env script from the
+used openembedded / poky meta layer will be sourced.
 
 After this step, everything is setup to build an image using bitbake.
-To use a shared download directory, you can provice $DL_DIR inside
-~/.yocto/site.conf. This will automatically symlinked in the conf dir
-of the build space.
+
+To force a build of all supported machines in one of the configs, one can
+use the CI helper script:
+
+ci/build-all <builddir> <config>
+
+depending on the selected config, the following will be built:
+
+minimal:	core-image-minimal
+
+To help to create a package mirror, one can use the CI helper script:
+
+ci/build-all <builddir> <config> mirror
+
+and define the following stuff in your site.conf:
+
+SOURCE_MIRROR_URL ?= "file://<full path>/"
+INHERIT += "own-mirrors"
+
+PREMIRRORS_prepend = "\
+        git://.*/.* file://full path>/ \n \
+        ftp://.*/.* file://full path>/ \n \
+        http://.*/.* file://full path>/ \n \
+        https://.*/.* file://full path>/ \n \
+        "
+
+To fill the mirror, the script 
+- allows to create also tarballs from SCM using BB_GENERATE_MIRROR_TARBALLS=1 
+- forces downloads for uninative packages by INHERIT_remove = \"uninative\""
+- copies all archives from DL_DIR to the mirror
+
+This way the mirror can be used to do offline builds without downloading anything
+with BB_FETCH_PREMIRRORONLY=1
 
 TODO: 
 - use dynamic-layers in meta-tq to allow integration of modified
 recipes from meta-ti
 - allow build without meta-ti
 - fix setup scripts
-- test and adopt jenkins support
+- test and adopt Jenkins CI support
  
