--- a/README
+++ b/README
@@ -32,14 +32,14 @@ To help setting up an initial build space, use
 
 export MACHINE=<machine> && source setup-environment <builddir> <config>
 
-where config is: minimal | gui | mfgtool
+where config is: minimal | gui | ti | mfgtool
 
 This will use sources/template/conf/bblayers.conf.<config> as initial template
 for your layer configuration. Additionally some config variables are injected:
 
 MACHINE: default tqma6q-mba6x or value from environment
 SDKMACHINE: default i686 or value from environment
-DISTRO: default poky  or value from environment
+DISTRO: default poky or value from environment
 
 In case you have ~/.oe or ~/.yocto dir a site.conf file will be symlinked to
 the conf dir of the buildir to allow machine specific overrrides. For instance 
@@ -57,9 +57,13 @@ ci/build-all <builddir> <config>
 
 depending on the selected config, the following will be built:
 
-minimal:	core-image-minimal
+minimal:	tq-image-generic (based on core-image-minimal)
+ti:		tq-image-generic (based on core-image-minimal)
 gui:		fsl-image-multimedia-full (meta-freescale-distro)
-mfgtool:	fsl-image-mfgtool-initramfs (meta-freescale)
+mfgtool:	fsl-image-mfgtool-initramfs (meta-freescale) - not tested with rocko
+
+this is used by TQ for automated builds, therefore some predefined auto.conf files
+bring in additional settings for the build space.
 
 To help to create a package mirror, one can use the CI helper script:
 
