README: add branch names for TQMa8
Signed-off-by: Markus Niebel <Markus.Niebel@tq-group.com>

--- a/README
+++ b/README
@@ -16,6 +16,8 @@ current supported branches:
 - morty
 - pyro
 - rocko (currently no i.MX mfgtool support)
+- rocko-tqma8x (only for TQMa8 platforms, based on NXP BSP)
+- sumo-tqma8x (only for TQMa8 platforms, based on NXP BSP)
 
 branch names correspond to yocto release names
 
