--- a/README
+++ b/README
@@ -40,7 +40,7 @@ DISTRO: default fsl-imx-wayland or value from environment, only the default
 is tested
 
 Attention: setup logic from NXP BSP will change / overwrite some definitions
-in meta-freescale
+in meta-freescale. Therefore you will notice changes in meta-freescale.
 
 In case you have ~/.oe or ~/.yocto dir a site.conf file will be symlinked to
 the conf dir of the buildir to allow machine specific overrrides. For instance 
@@ -56,15 +56,21 @@ source setup-environment <builddir>
 
 After this step, everything is setup to build an image using bitbake.
 
-To force a build of all supported machines in one of the configs, one can
+================================================================================
+
+Support for reproducible build environment
+
+Devolopment and automated builds are supported by the scripts under ci
+
+1) To build all supported machines in one of the configs, one can
 use the CI helper script:
 
 ci/build-all <builddir> gui
 
-only gui config is supported, it will build an image based on the qt5 demo
-image defined in meta-fsl-bsp-release/imx/meta-bsp
+Note: only gui config is supported for this branch, it will build tq-image-qt5
+(based on the qt5 demo image defined in meta-fsl-bsp-release/imx/meta-bsp)
 
-To help to create a package mirror, one can use the CI helper script:
+2) To help to create a package mirror, one can use the CI helper script:
 
 ci/build-all <builddir> <config> mirror
 
@@ -87,3 +93,25 @@ To fill the mirror, the script
 
 This way the mirror can be used to do offline builds without downloading anything
 with BB_FETCH_PREMIRRORONLY=1
+
+3) To force a clean build of all supported machines and generate archives, do_configure
+
+ci/build-all <builddir> <config> ci
+
+Most of the configuration data is held under source/template, notably
+
+- sample bblayer.conf files
+- sample auto.conf files and inclusion fragments (see Yocto Project doc for
+  local.conf and auto.conf
+
+================================================================================
+
+Security
+
+This project is focused on board bringup and demonstration for TQ Systems starter
+kits. Since embedded projects have different goals, the Yocto Project brings lots
+of features to modify system configuration and setup. This project is not a turn
+key distribution but a starting point fro own developments.
+
+RootFS created with this setup has for demonstration purpose and ease of
+development not root password set.
