--- a/README
+++ b/README
@@ -50,7 +50,13 @@ used openembedded / poky meta layer will be sourced.
 
 After this step, everything is setup to build an image using bitbake.
 
-To force a build of all supported machines in one of the configs, one can
+================================================================================
+
+Support for reproducible build environment
+
+Devolopment and automated builds are supported by the scripts under ci
+
+1) To build all supported machines in one of the configs, one can
 use the CI helper script:
 
 ci/build-all <builddir> <config>
@@ -65,7 +71,7 @@ network:	tq-image-network (from meta-dumpling, depends on fsl-image-networking)
 Note, that not all machines will be built in all configurations. Exclusions can
 be found in ci/build-all script.
 
-To help to create a package mirror, one can use the CI helper script:
+2) To help to create a package mirror, one can use the CI helper script:
 
 ci/build-all <builddir> <config> mirror
 
@@ -88,3 +94,25 @@ To fill the mirror, the script
 
 This way the mirror can be used to do offline builds without downloading anything
 with BB_FETCH_PREMIRRORONLY=1
+
+3) To force a clean build of all supported machines and generate archives, do_configure
+
+ci/build-all <builddir> <config> ci
+
+Most of the configuration data is held under source/template, notably
+
+- sample bblayer.conf files
+- sample auto.conf files and inclusion fragments (see Yocto Project doc for
+  local.conf and auto.conf
+
+================================================================================
+
+Security
+
+This project is focused on board bringup and demonstration for TQ Systems starter
+kits. Since embedded projects have different goals, the Yocto Project brings lots
+of features to modify system configuration and setup. This project is not a turn
+key distribution but a starting point fro own developments.
+
+RootFS created with this setup has for demonstration purpose and ease of
+development not root password set.
